--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,21 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:actionBarSize">100dp</item>
-    </style>
-
-
-    <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
-        <item name="android:textAllCaps">false</item>
+        <!--<item name="android:popupMenuStyle">@style/AppTheme.Popup</item>-->
     </style>
 
     <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
         <item name="android:textColor">#ffffff</item>
     </style>
 
+
+    <!--<style name="AppTheme.Popup" parent="Widget.AppCompat.PopupMenu.Overflow">-->
+    <!--<item name="android:listPreferredItemHeightSmall">1dp</item>-->
+    <!--</style>-->
 
     <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -38,8 +36,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary</item>
