--- a/app/src/main/res/layout/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout/activity_crop_field_manager.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.CropFieldManagerActivity">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
 
 
     <LinearLayout
@@ -15,106 +29,146 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:text="@string/field_name"
-                android:textSize="16sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                />
 
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:ems="10"
+                android:hint="Enter"
+                android:textSize="14sp"
+
 
                 />
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="15dp"
+            >
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/soil_category"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:layout_weight="0.5"
                 android:textSize="16sp" />
 
             <Spinner
-                android:id=""
+                android:id="@+id/sp_crop_field_soil_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:layout_weight="0.5"
                 android:layout_gravity="center"
-                android:entries="" />
+                android:entries="@array/crop_field_soil_category"
+                />
 
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/soil_type"
+                android:layout_weight="0.6"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
             <Spinner
-                android:id=""
+                android:id="@+id/sp_crop_field_soil_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.4"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
                 android:layout_gravity="center"
-                android:entries="" />
+                android:entries="@array/crop_field_soil_type"
+                />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:text="@string/watercourse"
-                android:textSize="16sp" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-            <EditText
-
+            <Spinner
+                android:id="@+id/sp_crop_field_watercourse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-
+                android:layout_weight="0.5"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:layout_gravity="center"
+                android:entries="@array/crop_field_watercourse"
                 />
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/total_area"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
             <EditText
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ems="5"
+                android:hint="Enter"
+                android:textSize="14sp"
+
 
 
                 />
@@ -123,35 +177,46 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/croppable_area"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
             <EditText
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:ems="5"
+                android:hint="Enter"
+                android:textSize="14sp"
 
                 />
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/soil_category"
+                android:text="@string/units"
+                android:layout_weight="0.5"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
             <Spinner
-                android:id=""
+                android:id="@+id/sp_crop_field_units"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:layout_gravity="center"
-                android:entries="" />
+                android:entries="@array/crop_field_units"
+                android:textSize="14sp"
+                />
 
         </LinearLayout>
 
@@ -165,11 +230,17 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_save"
+            style="@style/Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/save" />
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableTint="#ffffff"
+            android:text="Save "
+            android:textAllCaps="false"
+            android:textColor="#ffffff" />
+
 
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
