--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,8 +39,6 @@
     </style>
 
 
-
-
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary</item>
     </style>
@@ -77,5 +75,9 @@
     <style name="Button_2" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary_birds</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
